# otus-python-basic

./: LICENSE  README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  schemas.py  views.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: app.py
homework_05/static/css/: main.css
homework_05/templates/: about.html  base.html  index.html
homework_05/views/: about.py
