[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = "Homework 03 web application"
authors = ["Nikita Demakov <demakoffnik@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
